WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2022-04-14 Giovanni Bechis <g.bechis@snb.it>

	* use new Rspamd connection method by default

2022-03-30 Giovanni Bechis <g.bechis@snb.it>

	*** NOTE INCOMPATIBILITY ***

	Some methods are no more automatically exported and must be called
	using their namespace.
	Methods that are no more exported are:
	- All entity_contains_virus_*, message_contains_virus_*,
	  interpret_*_code, scan_file_using_fprotd_v6 and scan_file_using_carrier_scan
	  methods. Those methods must be called by using, for example,
	  Mail::MIMEDefang::Antivirus::message_contains_virus_clamav().
	- collect_parts must be called by using
	  Mail::MIMEDefang::MIME::collect_parts().
	- get_host_name must be called by using
	  Mail::MIMEDefang::Net::get_host_name().
	- header_timezone, rfc2822_date and gen_msgid_header must be called
	  using Mail::MIMEDefang::RFC2822 namespace.
	- read_results sub must be called
	  using Mail::MIMEDefang::Unit namespace.

2022-02-10 Giovanni Bechis <g.bechis@snb.it>

        * switch to Digest::SHA

2022-02-04 Giovanni Bechis <g.bechis@snb.it>

        * split mimedefang.pl code in Perl modules

2022-02-02 Giovanni Bechis <g.bechis@snb.it>

        * add re_match_in_7zip_directory to check for files
	  inside 7zip archives

2021-12-17 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.86 RELEASED

2021-12-12 Giovanni Bechis <g.bechis@snb.it>

        * Rspamd support by forking rspamc(1) binary
        is now deprecated, added Rspamd support by implementing
        its protocol

2021-12-09 Giovanni Bechis <g.bechis@snb.it>

	* fallback to plaintext when md_check_against_smtp_server
	fails SSL connection for unknown reasons

2021-08-25 Giovanni Bechis <g.bechis@snb.it>

	* MIMEDefang 2.85 RELEASED

2021-07-28 Giovanni Bechis <g.bechis@snb.it>

	* add experimental support to scan emails with Rspamd antispam
